# inf-3-analytics

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile.tunnel.example  Dockerfile  Overview.md  README.md  docker-compose.prod.yml  package-lock.json  pyproject.toml
demo/: RECORDING_GUIDE.md  gif-convert.sh
deploy/: .env.example  README.md
docs/: construction-site-analytics.md
examples/: event_extraction_example.py  event_visualize.py  llm_gemini_smoke.py  llm_openai_smoke.py  transcription_openai_example.py
frontend/: .env.local.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/decompose/: page.tsx
frontend/src/app/runs/: page.tsx
frontend/src/app/runs/[run_id]/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: AddEventModal.tsx  BoundingBoxOverlay.tsx  DecompositionProgress.tsx  DetectionToggleList.tsx  EventCard.tsx  EventComments.tsx  EventFrameViewer.tsx  EventList.tsx  LoadingSpinner.tsx  PipelineStatus.tsx  RunCard.tsx  SiteAnalyticsViewer.tsx  SplitPointEditor.tsx  SplitTimeline.tsx  VideoPlayer.tsx
frontend/src/lib/: api.ts  format.ts  i18n.tsx
frontend/src/types/: api.ts
scripts/: start-demo.sh  stop-demo.sh
src/inf3_analytics/: __init__.py
src/inf3_analytics/api/: __init__.py  __main__.py  app.py  config.py  dependencies.py  middleware.py  models.py  pipeline_executor.py  queue.py  registry.py  worker.py
src/inf3_analytics/api/routes/: artifacts.py  decomposition.py  events.py  pipeline.py  runs.py  upload.py  video.py
src/inf3_analytics/cli/: __init__.py  extract_event_frames.py  extract_events.py  progress.py  run_frame_analytics.py  run_site_analytics.py  transcribe.py
src/inf3_analytics/engines/: __init__.py
src/inf3_analytics/engines/event_extraction/: __init__.py  base.py  llm.py  rules.py
src/inf3_analytics/engines/transcription/: __init__.py  base.py  faster_whisper_engine.py  gemini_engine.py  openai_engine.py
src/inf3_analytics/frame_analytics/: __init__.py  aggregate.py  base.py  baseline_quality.py  color_classify.py  prompting.py  vlm_gemini.py  vlm_openai.py  vlm_site.py  yolo_world.py
src/inf3_analytics/frame_extraction/: __init__.py  extract.py  policies.py
src/inf3_analytics/io/: __init__.py  analytics_writer.py  comment_writer.py  event_writer.py  frame_manifest_writer.py  transcript_writer.py
src/inf3_analytics/media/: __init__.py  audio_extract.py  frame_extract.py  video_decompose.py  video_probe.py
src/inf3_analytics/types/: __init__.py  comment.py  decomposition.py  detection.py  event.py  frame.py  media.py  transcript.py
src/inf3_analytics/utils/: __init__.py  time.py
tests/: __init__.py  conftest.py  test_color_classify.py  test_detection_types.py  test_engine_registry.py  test_event_aggregation.py  test_event_grouping.py  test_event_json_roundtrip.py  test_event_types.py  test_frame_manifest_writer.py  test_frame_policies.py  test_frame_types.py  test_gemini_engine.py  test_openai_engine.py  test_prompt_schema_validation.py  test_rules_engine.py  test_srt_writer.py  test_time_format.py  test_transcript_json_roundtrip.py  test_vlm_engine_parsing.py  test_vlm_site.py  test_yolo_world.py
tests/api/: conftest.py  test_artifacts.py  test_pipeline.py  test_runs.py  test_upload.py  test_video.py
