[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inf3-analytics"
version = "0.1.0"
description = "Infrastructure inspection video analytics pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Infrastructure Analytics Team" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "faster-whisper>=1.0.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]
openai = ["openai>=1.0.0,<2.0.0"]
gemini = ["google-genai>=1.0.0,<2.0.0"]
cloud = [
    "openai>=1.0.0,<2.0.0",
    "google-genai>=1.0.0,<2.0.0",
]
cv = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.0.0",
    "sse-starlette>=2.0.0",
    "filelock>=3.13.0",
]

[project.scripts]
inf3-transcribe = "inf3_analytics.cli.transcribe:main"
inf3-extract-events = "inf3_analytics.cli.extract_events:main"
inf3-extract-event-frames = "inf3_analytics.cli.extract_event_frames:main"
inf3-frame-analytics = "inf3_analytics.cli.run_frame_analytics:main"
inf3-worker = "inf3_analytics.api.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["src/inf3_analytics"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["inf3_analytics"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["faster_whisper.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google.genai.*", "google.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cv2.*", "numpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["uvicorn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/inf3_analytics"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
